CMAKE_MINIMUM_REQUIRED(VERSION 3.3.0 FATAL_ERROR)
PROJECT(redis)

SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_EXTENSIONS OFF)

OPTION(DCHECK_ALWAYS_ON "Enable dcheck in release." OFF)

IF(DCHECK_ALWAYS_ON)
  ADD_DEFINITIONS(-DDCHECK_ALWAYS_ON)
ENDIF(DCHECK_ALWAYS_ON)

FIND_PACKAGE(Hiredis REQUIRED)

SET(HEADERS
  ${CMAKE_SOURCE_DIR}/src/server/redis/connection.h
  ${CMAKE_SOURCE_DIR}/src/server/redis/config.h
)

SET(SOURCES
  ${CMAKE_SOURCE_DIR}/src/server/redis/connection.cpp
  ${CMAKE_SOURCE_DIR}/src/server/redis/config.cpp
)

SET(REDIS_SOURCES ${HEADERS} ${SOURCES})
SET(REDIS_LIBRARIES ${COMMON_BASE_LIBRARY} ${COMMON_EV_LIBRARIES} ${HIREDIS_LIBRARIES})
SET(INCLUDE_DIRECTORIES_REDIS
  ${INCLUDE_DIRECTORIES_REDIS}
  ${HIREDIS_INCLUDE_DIRS}
  ${CMAKE_SOURCE_DIR}/src
)

ADD_LIBRARY(${PROJECT_NAME} STATIC ${REDIS_SOURCES})
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE ${INCLUDE_DIRECTORIES_REDIS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${REDIS_LIBRARIES})

IF (DEVELOPER_CHECK_STYLE)
  SET(CHECK_SOURCES ${REDIS_SOURCES})
  REGISTER_CHECK_STYLE_TARGET(check_style_redis "${CHECK_SOURCES}")
  REGISTER_CHECK_INCLUDES_TARGET(${PROJECT_NAME})
ENDIF(DEVELOPER_CHECK_STYLE)

IF(DEVELOPER_ENABLE_TESTS)
  FIND_PACKAGE(GTest REQUIRED)
  ADD_DEFINITIONS(-DPROJECT_TEST_SOURCES_DIR="${CMAKE_SOURCE_DIR}/tests")
  ## Redis tests
  SET(PRIVATE_INCLUDE_DIRECTORIES_NET_TESTS
    ${PRIVATE_INCLUDE_DIRECTORIES_NET_TESTS}
    ${CMAKE_SOURCE_DIR}/src
  )
  SET(REDIS_TEST_LIBS ${PROJECT_NAME} ${GTEST_BOTH_LIBRARIES} ${COMMON_BASE_LIBRARY} ${PROJECT_NAME} pthread)
  ADD_EXECUTABLE(redis_test
    ${CMAKE_SOURCE_DIR}/tests/server/redis/redis_test.cpp
  )
  TARGET_INCLUDE_DIRECTORIES(redis_test PRIVATE ${PRIVATE_INCLUDE_DIRECTORIES_NET_TESTS})
  TARGET_LINK_LIBRARIES(redis_test ${REDIS_TEST_LIBS})
  SET_PROPERTY(TARGET redis_test PROPERTY FOLDER "redis tests")
ENDIF(DEVELOPER_ENABLE_TESTS)
